finish deafult layout component

--- a/src/UIKit/Layouts/BaseLayout/index.module.css
+++ b/src/UIKit/Layouts/BaseLayout/index.module.css
@@ -1,7 +1,12 @@
-.container {
+.content {
     background-color: #1E1E1E;
     border-radius: 0px 0px 15px 15px;
     border: 1px solid #848484;
     transition: width 0.3s, height 0.3s;
     overflow-y: auto;
+    display: relative;
+}
+
+.container {
+    display: inline-block;
 }
